# Backend_AI_Paraphrasing_Service

./: .env  .env.example  Cargo.toml  README.md
src/: main.rs
src/config/: database.rs
src/handlers/: history_handler.rs  mod.rs  paraphrase_handler.rs
src/models/: mod.rs
src/routes/: mod.rs
src/services/: db_service.rs  mod.rs  paraphrase_service.rs
static/: index.html
