[package]
name = "paraphrasing_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
mongodb = { version = "2.8", features = ["bson-chrono-0_4"] }
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15"
jsonwebtoken = "9.2"
bcrypt = "0.15"
env_logger = "0.10"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
